@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999959';
+our $VERSION='0.99999960';
 
 
 use 5.005;
